Adapted to Android JellyBean 4.2.2